@@ -146,6 +146,7 @@ public class WaterProfile {
 	}
 	
 	public String toString() {
+		// this is broken:
 		String str = String.format("%s => %3.1dca %3.1dmg %3.1dna %3.1dso4 %3.1dhc03 %3.1dcl %3.1dhardness %3.1dtds %3.1dph %3.1dalk",
 				new Object[] {name,
 				new Double(ca),
